header banner with general structure - user img cors/proxy not completed

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,3 +2,12 @@
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+:root {
+    --accent-color: #30C5FF;
+    --primary-color: #5C946E;
+    --secondary-color: #80C2AF;
+    --tertiary-color: #A0DDE6;
+    --background-color: #2A2D34;
+  }
