--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,11 +1,10 @@
 <div class="container">
-    <div class="img-container" (click)="onImgClick()">
+    <div class="img-container" (click)="onMaxImgClick()">
         <img src="/assets/max.jpg">
     </div>
 
     <div class="bar">
-        <img *ngIf="userIcon.length > 0" [src]="userIcon">
-        <span>{{userIcon}}</span>
-        <app-button label="Logout" icon="logout"></app-button>
+        <span *ngIf="userService.user$ | async as user">{{user?.displayName}}</span>
+        <app-button label="Logout" icon="logout" (click)="onLogoutClick()"></app-button>
     </div>
 </div>
