--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -1,6 +1,6 @@
 :host {
     .container {
-        height: 120px;
+        height: 100%;
         width: 100%;
         background-color: var(--background-color);
 
@@ -35,10 +35,7 @@
             padding-top: 40px;
             padding-right: 10px;
             grid-gap: 2em;
-            
-            span {
-                color: white;
-            }
+        
         }
     }
 }
