--- a/src/app/room/room.component.html
+++ b/src/app/room/room.component.html
@@ -1,3 +1,11 @@
-<div style="width: 100%; height: 100%; background-color: var(--primary-color);">
+<div class="vertical-center">
+    <div class="horizontal-center">
+        <span>{{room?.name}}</span>
 
+        <ul>
+           <li *ngFor="let member of members">
+               
+           </li> 
+        </ul>
+    </div>
 </div>
