--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -1,3 +1,3 @@
 <button mat-button mat-flat-button color="accent" (click)="action.emit($event)">
-    <mat-icon>{{icon}}</mat-icon>{{label}}
+    <mat-icon *ngIf="icon">{{icon}}</mat-icon>{{label}}
 </button>
